[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Parking_Spot.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.125, 30.25 )

[node name="Parking_Spot" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -29.0
margin_right = 17.0
margin_bottom = 29.0
mouse_filter = 2
color = Color( 0, 1, 0.203922, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parking_Area" type="Area2D" parent="."]

[node name="ParkingAreaCollisionShape2D" type="CollisionShape2D" parent="Parking_Area"]
shape = SubResource( 1 )

[node name="Form" type="Node2D" parent="."]

[node name="TypeLineEdit" type="LineEdit" parent="Form"]
margin_left = -29.0
margin_top = -54.0
margin_right = 29.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberLineEdit" type="LineEdit" parent="Form"]
margin_left = -29.0
margin_top = -29.0
margin_right = 29.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VehicleType" type="Label" parent="Form"]
margin_left = -116.0
margin_top = -49.0
margin_right = -31.0
margin_bottom = -35.0
text = "Vehicle Type:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VehicleNumber" type="Label" parent="Form"]
margin_left = -139.0
margin_top = -25.0
margin_right = -32.0
margin_bottom = -11.0
text = "Vehicle Number:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Form"]
margin_right = 112.0
margin_bottom = 20.0
text = "Confirm Parking"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="Parking_Area" to="." method="_on_Parking_Area_input_event"]
[connection signal="pressed" from="Form/Button" to="." method="_on_Button_pressed"]
